<resources>
    <!--VIEW MAINACTIVITY-->
    <string name="app_name">Tags</string>
    <string name="textEditCode">codigo</string>
    <string name="textEditDesc">Descripcion</string>
    <string name="textBtnSave">Guardar</string>
    <string name="textBtnConectarApi">Conectar con API</string>


    <!--INVENOTRY-->

    <string name="inventory_list">Lista Inventario</string>
    <string name="inventory_title">Lista Inventario</string>
    <string name="btnEjecutarInventario">Ejecutar</string>
    <string name="title_activity_login__rfid">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--LOGIN -->
    <string name="login_title">Login</string>
    <string name="login_code">Codigo</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="btn_login">Ingresar</string>
</resources>
