<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/editId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textEditCode"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/editDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textEditDesc"
            android:inputType="textPersonName"
            android:text="" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textBtnSave" />

        <Button
            android:id="@+id/ejecutar_api"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textBtnConectarApi" />

        <ListView
            android:id="@+id/listRfid"
            android:layout_width="match_parent"
            android:layout_height="458dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="62dp">

        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>